// Older protoc compilers don't understand edition yet.
syntax = "proto3";
package a2a.v1;

import "google/protobuf/struct.proto";
import "a2a_core.proto";

option csharp_namespace = "A2a.V1";
option go_package = "google.golang.org/a2a/v1";
option java_multiple_files = true;
option java_outer_classname = "A2A";
option java_package = "com.google.a2a.v1";


/////// JSON-RPC Support /////////

message A2AJsonRPCRequest {

  string jsonrpc = 1;

  string method = 2;

  oneof id {
    string id_string = 3;
    int64 id_int = 4;
  }

  oneof params {
    SendMessageRequest send_message_request = 5;
    GetTaskRequest get_task_request = 6;
    CancelTaskRequest cancel_task_request = 7;
    TaskSubscriptionRequest task_subscription_request = 8;
    CreateTaskPushNotificationConfigRequest create_task_push_notification_config_request = 9;
    GetTaskPushNotificationConfigRequest get_task_push_notification_config_request = 10;
    ListTaskPushNotificationConfigRequest list_task_push_notification_config_request = 11;
    DeleteTaskPushNotificationConfigRequest delete_task_push_notification_config_request = 12;
    GetAgentCardRequest get_agent_card_request = 13;
  }
}

message A2AJsonRPCResponse {

  oneof response {
    A2AJsonRPCResponseSuccess success = 1;
    A2AJsonRPCResponseError error = 2;
  }
}

message A2AJsonRPCResponseSuccess {

  string jsonrpc = 1;

  oneof id {
    string id_string = 2;
    int64 id_int = 3;
  }

  oneof result {
    SendMessageResponse send_message_response = 4;
    Task get_task_response = 5;
    Task cancel_task_response = 6;
    ListTaskPushNotificationConfigResponse list_task_push_notification_config_response = 7;
    TaskPushNotificationConfig get_task_push_notification_config_response = 8;
    TaskPushNotificationConfig create_task_push_notification_config_response = 9;
    AgentCard get_agent_card_response = 10;
  }
}

message A2AJsonRPCResponseError {

  string jsonrpc = 1;

  oneof id {
    string id_string = 2;
    int64 id_int = 3;
  }

  A2AJsonRPCError error = 4;
}

message A2AJsonRPCError {
  JsonRPCErrorCode code = 1;
  string message = 2;
  google.protobuf.Struct data = 3;
}

enum JsonRPCErrorCode {
  JSON_RPC_ERROR_CODE_UNSPECIFIED = 0;

  PARSE_ERROR = -32700;

  INVALID_REQUEST = -32600;

  METHOD_NOT_FOUND = -32601;

  INVALID_PARAMS = -32602;

  INTERNAL_ERROR = -32603;

  TASK_NOT_FOUND = -32001;

  TASK_NOT_CACHEABLE = -32002;

  PUSH_NOTIFICATION_NOT_SUPPORTED = -32003;

  UNSUPPORTED_OPERATION_ERROR = -32004;

  CONTENT_TYPE_NOT_SUPPORTED = -32005;

  INVALID_AGENT_RESPONSE = -32006;

  AUTHENTICATED_CARD_NOT_CONFIGURED = -32007;
}